6/20/2002
	- Add Zone.removeRecord() (based on code from Adam Cassar
	  <adam.cassar@netregistry.com.au>)

6/16/2002
	- Update lots of code to use Collections instead of JDK 1.1
	  Vectors & Hashtables.

5/28/2002
	- fix some limitations of name parsing.
	  (reported by Tasos Kotsikonas <tasos@boldfish.com>)

5/4/2002
	- added the 'sleep' and 'date' commands to the update client.
	  (Olafur Gudmundsson <ogud@ogud.com>)

4/29/2002
	- 1.2.4 released

4/25/2002
	- Add a constructor for building a zone from an array of records.
	  (based on code from Adam Cassar <adam.cassar@netregistry.com.au>)

4/24/2002
	- Reduce the memory usage of the RRset class.
	- Add a new factory method for creating a Record from a
	  String, rather than a pre-tokenized String.
	- Reduce the memory usage of the ARecord class.

4/23/2002
	- Fix potential race conditions in the RRset class.
	  (David Esposito <esposito@newnetco.com>)
	- Fix potential race condition in the WorkerThread class when two
	  threads complete their run methods nearly simultaneously.
	  (David Esposito)
	- Add a new factory method for creating a Record, where the length
	  of the rdata is not explicitly specified, but inferred from
	  data.length.

4/22/2002
	- Improve name decompression by not requiring a decompression context.

3/27/2002
	- Add support for the Delegation Signer (DS) record. (David Blacka)

3/22/2002
	- Record.equals() did not properly canonicalize names.
	- Record.equals() should ignore the TTL.

3/19/2002
	- When a compressed name is parsed, it should be added to the
	  compression table, so that future pointers to that name work.
	  (reported by Blake Ramsdell <blake@brutesquadlabs.com>)

3/14/2002
	- In jnamed, AXFR responses didn't have the message ID or flags
	  set correctly.
	- jnamed failed to respond to messages signed with unknown keys.
	- jnamed did not sign responses to signed AXFR queries.

1/21/2002
	- Handle empty domain statements in /etc/resolv.conf. (reported